--- a/project_3/online_registration_form_project/online_registration_form_project/styles.css
+++ b/project_3/online_registration_form_project/online_registration_form_project/styles.css
@@ -114,7 +114,15 @@ select{
     font-size: 1em;
     }
     
-input:focus {
+input:focus{
+    background-color: lightblue;
+    }
+
+select:focus{
+    background-color: lightblue;
+    }
+
+textarea:focus{
     background-color: lightblue;
     }
 
@@ -126,6 +134,10 @@ input:focus {
     display: block;
     margin-top: 2em;
     }
+
+.field_3:hover{
+    background-color: rgb(102, 102, 241);
+}
 
 
 
@@ -141,7 +153,7 @@ input:focus {
      body{
         max-width: 100vw;
      }   
-     
+
     body, header{
         margin: auto;
     }
@@ -178,7 +190,7 @@ input:focus {
     }
 
     .input_width_2{
-        width: 15%;
+        width: 18.75%;
         height: 30px;
         margin-left: 170px;
         background-color: rgb(207, 204, 204);
